content spacing fixes

--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -22,7 +22,7 @@
 
       pointer-events: auto;
 
-      background: #fff;
+      background: var(--color-background);
 
       transform: translate3d(105%, 0, 0);
 
